--- a/InvestingApp/Views/Shared/_Layout.cshtml
+++ b/InvestingApp/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - AK private investing technologies</title>
+    <title>@ViewBag.Title - AK Investing Technologies</title>
     <link rel="icon" type="image/png" href="@Url.Content("~/Content/Images/favicon.png")" />
     <script src='https://www.google.com/recaptcha/api.js'></script>
     @Styles.Render("~/Content/css")
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("AK Techs", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("AK Investing Technologies", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="collapse navbar-collapse" id="navBar">
                 <ul class="nav navbar-nav">
@@ -81,7 +81,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p style="text-align:center">&copy; @DateTime.Now.Year - AK Investing Techs</p>
+            <p style="text-align:center">&copy; @DateTime.Now.Year - AK Investing Technologies</p>
         </footer>
     </div>
 
