--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
               hAxis: { showTextEvery: @ticksCount },
               series: { 
                   0: { },
-                  1: {lineWidth: 2, color: 'gray', lineDashStyle: [2, 2] }
+                  1: {lineWidth: 2, color: 'lightgray', lineDashStyle: [2, 2] }
               }
           };
 
