Colors fix on balances graph.

--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -50,8 +50,8 @@
                 },
               },
               series: {
-                  0: { lineWidth: 3 },
-                  1: { lineWidth: 2, color: 'darkgray', lineDashStyle: [2, 2] },
+                  0: { lineWidth: 2 },
+                  1: { lineWidth: 2, color: 'darkgreen', lineDashStyle: [2, 2] },
                   2: { lineWidth: 2, color: 'darkred', lineDashStyle: [2, 2] }
               }
           };
