Final graphs on index page.

--- a/InvestingApp/Views/Account/Index.cshtml
+++ b/InvestingApp/Views/Account/Index.cshtml
@@ -62,6 +62,7 @@
         var options = {
             title: 'Investment shared ratio',
             legend: { position: 'bottom' },
+            is3D: true
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('ratioChart'));
