Sharpe index calculation. Refactoring.

--- a/InvestingApp/Views/Account/Index.cshtml
+++ b/InvestingApp/Views/Account/Index.cshtml
@@ -58,7 +58,7 @@
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 <script type="text/javascript">
-    google.charts.load('current', { 'packages': ['corechart'] });
+    google.charts.load('current', { 'packages': ['corechart'], 'language': '@CultureInfo.CurrentCulture.TwoLetterISOLanguageName' });
     google.charts.setOnLoadCallback(drawCharts);
 
     function drawCharts() {
