--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -159,7 +159,7 @@
                     </tr>
                     <tr>
                         <th>Current balance</th>
-                        <th>Sharpe ratio <sup><a target="_blank" href="https://en.wikipedia.org/wiki/Sharpe_ratio">?</a></sup></th>
+                        <th>Cum. sharpe ratio <sup><a target="_blank" href="https://en.wikipedia.org/wiki/Sharpe_ratio">?</a></sup></th>
                     </tr>
                     <tr>
                         <td class="text-info">
