Added percents in month profit (account).

--- a/InvestingApp/Views/Account/Index.cshtml
+++ b/InvestingApp/Views/Account/Index.cshtml
@@ -47,7 +47,7 @@
                             @: <td class="text-danger">
                         }
                     }
-                    @Model.LastMonthProfit RUB
+                    @Model.LastMonthProfit RUB (@Model.LastMonthPercent %)
                 </td>
                 </tr>
             </tbody>
