--- a/InvestingApp/Views/Home/Index.cshtml
+++ b/InvestingApp/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model InvestingApp.Models.GeneralInvestingInfo
 @using System.Globalization;
 @using InvestingApp.Models;
+@using InvestingApp.Helpers;
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -12,7 +13,7 @@
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart'], 'language': '@CultureInfo.CurrentCulture.TwoLetterISOLanguageName'});
+      google.charts.load('current', {'packages':['corechart'], 'language': '@MVCStringsHelper.GetCurrentCultureDesignation()'});
       google.charts.setOnLoadCallback(drawCharts);
 
       function drawCharts() {
@@ -22,10 +23,10 @@
 
       function drawBalancesChart() {
           @{
-              var bxs = new MvcHtmlString(string.Join(",", Model.Data.Select(o => string.Format("'{0}'", o.DateTimeStamp.ToString("MMM d yyyy", CultureInfo.InvariantCulture)))));
-              var by1s = new MvcHtmlString(string.Join(",", Model.Data.Select(o => o.Balance.ToString("0.00", CultureInfo.InvariantCulture))));
-              var by2s = new MvcHtmlString(string.Join(",", Model.Savings.Select(o => o.ToString("0.00", CultureInfo.InvariantCulture))));
-              var by3s = new MvcHtmlString(string.Join(",", Model.DollarBHs.Select(o => o.ToString("0.00", CultureInfo.InvariantCulture))));
+              var bxs = MVCStringsHelper.GetMVCDatesString(Model.Data.Select(o => o.DateTimeStamp));
+              var by1s = MVCStringsHelper.GetMVCDoublesString(Model.Data.Select(o => o.Balance));
+              var by2s = MVCStringsHelper.GetMVCDoublesString(Model.Savings);
+              var by3s = MVCStringsHelper.GetMVCDoublesString(Model.DollarBHs);
               var rate = GeneralInvestingInfo.RISK_FREE_RATE;
           }
           var xs = [@bxs];
@@ -61,9 +62,9 @@
       }
     function drawProfitsChart() {
         @{
-            var pxs = new MvcHtmlString(string.Join(",", Model.ProfitsPerMonth.Select(o => string.Format("'{0}'", o.Description))));
-            var py1s = new MvcHtmlString(string.Join(",", Model.ProfitsPerMonth.Select(o => o.Value.ToString("0.00", CultureInfo.InvariantCulture))));
-            var py2s = new MvcHtmlString(string.Join(",", Model.ProfitsPerMonth.Select(o => o.Percent.ToString("0.00", CultureInfo.InvariantCulture))));
+            var pxs = MVCStringsHelper.GetMVCString(Model.ProfitsPerMonth.Select(o => o.Description));
+            var py1s = MVCStringsHelper.GetMVCDoublesString(Model.ProfitsPerMonth.Select(o => o.Value));
+            var py2s = MVCStringsHelper.GetMVCDoublesString(Model.ProfitsPerMonth.Select(o => o.Percent));
         }
          var xs = [@pxs];
          var y1s = [@py1s];
